feat: Logs items when generated